2011-11-04  Philipp Kern  <phil@0x539.de>

	* configure.ac:
	* NEWS: bump version to 0.4.8, document the changes

2011-10-30  Philip Kern  <phil@0x539.de>

	* po/ast.po:
	* po/en_GB.po:
	* po/pt_BR.po:
	* po/ca.po:
	* po/de.po:
	* po/es.po:
	* po/fr.po:
	* po/it.po:
	* po/nl.po:
	* po/oc.po:
	* po/sv.po:
	* po/uk.po: updated translations from Launchpad

	* po/LINGUAS: add ast, en_GB and pt_BR

2011-10-30  Armin Burgmeier  <armin@arbur.net>

	* inc/server_buffer.hpp: During authentication, swap user color and
	global password checks, to avoid for a non-authorized person to gather
	information on used user colors (Vasiliy Kulikov).

2011-02-09  Philipp Kern  <phil@0x539.de>

	* po/da.po: Added Danish translation by Joe Dalton.
	Debian bug #605322.

	* po/LINGUAS: Added da.

2009-10-12  Armin Burgmeier  <armin@0x539.de>

	* po/uk.po: Added Ukrainian translation by Yuri Chornoivan. Bug #479.

	* po/LINGUAS: Added uk.

2009-01-01  Philipp Kern  <phil@0x539.de>

	* po/ca.po:
	* po/de.po:
	* po/es.po:
	* po/it.po:
	* po/nl.po:
	* po/oc.po:
	* po/sv.po: imported from Launchpad

2009-01-01  Philipp Kern  <phil@0x539.de>

	* configure.ac:
	* NEWS: bump version to 0.4.7, document the changes

2009-01-01  Philipp Kern  <phil@0x539.de>

	* po/oc.po: adjusted report-msgid-bugs-to

2008-12-04  Armin Burgmeier  <armin@0x539.de>

	* contrib/obby_web/obby.php: Use UTF-8 charset for htmlentities(), so
	that non-ASCII-characters are correctly shown (Bug #405).

2008-11-27  Philipp Kern  <phil@0x539.de>

	* po/fr.po: reviewed and completed French translation, thanks to
	Christian Perrier

2008-10-06  Philipp Kern  <phil@0x539.de>

	* po/fr.po: fixed typo in French translation (thanks to Lionel
	Porcheron)

2008-09-09  Philipp Kern  <phil@0x539.de>

	* configure.ac:
	* NEWS: bump version to 0.4.6, document the changes

2008-09-09  Philipp Kern  <phil@0x539.de>

	* po/LINGUAS:
	* po/oc.po: add new Occitan (post 1500) translation

2008-09-09  Philipp Kern  <phil@0x539.de>
