@@ -1,5 +1,10 @@
 2011-11-04  Philipp Kern  <phil@0x539.de>
 
+	* test/test_jupiter.cpp: fix base_file lookup on make
+	distcheck
+
+2011-11-04  Philipp Kern  <phil@0x539.de>
+
 	* configure.ac:
 	* NEWS: bump version to 0.4.8, document the changes
 
